# plotish

./: .gitignore  README.md  dataset.py  main.py  plottish.py  pyproject.toml  requirements.txt  template.json
.github/workflows/: ci.yml
interfaces/: figureinterface.py  linesInterface.py  utils.py
src/plotish/: __init__.py  __main__.py  dataset.py
src/plotish/interfaces/: figureinterface.py  linesInterface.py  utils.py
tests/: conftest.py  test_dataset.py  test_figure_interface.py  test_line_interface.py  test_plotish.py  test_utiils.py
