[build-system]
requires = ['poetry-core>=1.2.0', 'wheel',]
build-backend = 'poetry.core.masonry.api'


[tool.poetry]
name = 'plotish'
version = '0.6.0'
description = "Python plot interface"

packages = [
    { include = 'plotish', from = 'src' },
]

authors = ["Casale Benjamin <benjamin.casale@proton.me>"]

include = ['README.md', 'LICENSE']
license = 'MIT'
readme = 'README.md'

repository = "https://github.com/"
documentation = "https://github.com/"

keywords = [
    'python3',
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.10"
numpy='*'
matplotlib='*'
pandas='*'


[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
black="23.3.0"
check-manifest="0.49"
flake8-bugbear="23.5.9"
flake8-docstrings='*'
flake8-formatter_junit_xml='*'
flake8='*'
flake8-pyproject='*'
pre-commit="3.3.1"
pylint="2.17.4"
pylint_junit='*'
pytest-cov="4.0.0"
pytest-mock=">3.10.1"
pytest-runner='*'
pytest="7.3.1"
shellcheck-py="0.9.0.2"
    



[tool.pytest.ini_options]
addopts = "-v --durations=3 --cov-report html:coverage.html --cov src --cov-fail-under 0 --cov-append -m 'not integration and not slow'"
pythonpath = [
  "src"
]
testpaths = "tests"
junit_family = "xunit2"
markers = [
    "integration: marks as integration test",
    "gpu: marks as gpu test",
    "slow: marks tests as slow",
    "unit: fast offline tests",
]
